# RAS-SES-598-Space-Robotics-and-AI

./: Photogrammetry and Gaussian Splatting on Lunar Apollo 17
assignments/: Photogrammetry and Gaussian Splatting on Lunar Apollo 17  README.MD
assignments/Photogrammetry and Gaussian Splatting on Lunar Apollo 17/: README.md
assignments/cart_pole_optimal_control/: README.md
assignments/cart_pole_optimal_control/cart_pole_optimal_control/: lqr_controller.py
assignments/first_order_boustrophedon_navigator/: README.md
assignments/first_order_boustrophedon_navigator/first_order_boustrophedon_navigator/: boustrophedon_controller.py
assignments/terrain_mapping_drone_control/: CMakeLists.txt  README.md
assignments/terrain_mapping_drone_control/launch/: MissionFile.launch.py
assignments/terrain_mapping_drone_control/terrain_mapping_drone_control/: CylinderEstimation.py  MissionFile.py  aruco_tracker.py  cylinder_landing_node.py  spiral_trajectory.py
